# Backend/api/main.py
@@ -5,6 +5,7 @@ from os import path
 import requests
 import sqlalchemy
 from flask import Flask, Blueprint, request
+from flask_login import current_user
 from flask_restful import Resource, Api, reqparse
 from flask import jsonify
 from flask.views import MethodView
@@ -18,7 +19,7 @@ from Backend.data_base.models import *
 api_main = Blueprint('main-api', __name__, url_prefix='main-api')
 
 
-class GamesAPI(MethodView):
+class CatalogAPI(MethodView):
 
     def __init__(self) -> None:
         self.GAMES_PER_PAGE = 8
@@ -30,22 +31,31 @@ class GamesAPI(MethodView):
         print(self.SIZE)
         super().__init__()
 
-    def get(self, id=None):
+    @property
+    def get_genres(self):
+        return list(self.GAME_GENRES)
+
+    @property
+    def get_games(self):
+        return self.GAME_GENRES
+
+    @property
+    def get_game_genres(self):
+        return self.GAME_GENRES
+
+    def get(self):
         for k, v in request.args.items():
             print(f"[{k}: {v}], ")
         page = request.args.get('page', 1, int)
         print(f"page = {page}")
-        if id:
-            game = Game.query.get_or_404(id)
-            return jsonify(game=dataclasses.asdict(game)), 200
-        else:
-            from flask_sqlalchemy import Pagination
-            games: Pagination = Game.query.paginate(page=page, per_page=self.GAMES_PER_PAGE,
-                                                    max_per_page=self.GAMES_PER_PAGE_MAX)
-            paginated_games = games.items
-            games_dict = dict()
-            for i, game in enumerate(paginated_games):
-                games_dict[i] = dataclasses.asdict(game)
+
+        from flask_sqlalchemy import Pagination
+        games: Pagination = Game.query.paginate(page=page, per_page=self.GAMES_PER_PAGE,
+                                                max_per_page=self.GAMES_PER_PAGE_MAX)
+        paginated_games = games.items
+        games_dict = dict()
+        for i, game in enumerate(paginated_games):
+            games_dict[i] = dataclasses.asdict(game)
         return jsonify(games=games_dict, total=len(games_dict), games_remaining=self.SIZE - len(games_dict)), 200
 
     def post(self, key=None):
@@ -90,11 +100,19 @@ class GamesAPI(MethodView):
                 print(self.GAME_GENRES)
                 print(self.GAMES)
                 print(self.GENRES)
-                #     game.genres = list(curr_game_genres)
-                #     db.session.add(game)
-                # db.session.commit()
+
                 db.session.add_all(self.GENRES)
                 db.session.add_all(self.GAMES)
+
+                dict_case = self.GAME_GENRES.keys()
+                for el in dict_case:
+                    game = Game.query.get(el)
+                    temp_list = []
+                    for i in range(len(self.GAME_GENRES[el])):
+                        temp_list.append(Genre.query.get(int(self.GAME_GENRES[el][i])))
+                    game.genres = temp_list
+                    db.session.add(game)
+                    db.session.commit()
 
                 # games_db = Game.query.all()
                 # for game_id, genres_ids in self.GAME_GENRES.items():
@@ -113,12 +131,13 @@ class GamesAPI(MethodView):
                 #     for genre_id in genres_ids:
                 #         db.session.add(game_genres(game_id=game_id, genre_id=genre_id))
                 # db.session.add_all(self.GAMES)
-                db.session.commit()
+                # db.session.commit()
 
                 logging.info(f"ALL GENRES COUNT: {len(self.GENRES)}")
                 print(self.GAME_GENRES)
                 print(self.GAMES)
                 print(self.GENRES)
+
             except exc.SQLAlchemyError as e:
                 logging.exception("AN ERROR OCCURRED WHILE ADDING GAME", exc_info=e)
             finally:
@@ -133,7 +152,7 @@ class GamesAPI(MethodView):
 
         return addSteamGames()
 
-    def get_genres(self, src: dict):
+    def fill_genres(self, src: dict):
         tmp = set()
         for genre in src:
             genre_id = int(genre["id"])
@@ -156,7 +175,7 @@ class GamesAPI(MethodView):
         rating = int(game_info["metacritic"]["score"] if game_info.get("metacritic") else 0)
         preview_url: str = f"https://steamcdn-a.akamaihd.net/steam/apps/{app_id}/header.jpg"
 
-        curr_game_genres = self.get_genres(game_info["genres"])
+        curr_game_genres = self.fill_genres(game_info["genres"])
         logging.info(curr_game_genres)
         # logging.info(f"CURR GENRES: {curr_game_genres}")
 
@@ -166,48 +185,64 @@ class GamesAPI(MethodView):
         return game, curr_game_genres
 
 
-catalog = GamesAPI.as_view("catalog")
+catalog = CatalogAPI.as_view("catalog")
 api_main.add_url_rule("/catalog", endpoint="catalog", view_func=catalog, methods=["GET"])
 api_main.add_url_rule("/catalog/upload", endpoint="catalog", view_func=catalog, methods=["POST"])
-api_main.add_url_rule("/game/<int:id>", endpoint="game", view_func=catalog, methods=["GET"])
+
+
+class GameAPI(Resource):
+    def get(self, id):
+        if id:
+            game = Game.query.get_or_404(id)
+            return jsonify(game=dataclasses.asdict(game), code=200), 200
+
+    def post(self, id):
+        if request.method == "POST":
+            if current_user.is_authenticated:
+                user = User.query.get(current_user.id)
+                try:
+                    game = Game.query.get(id)
+                    # user_games.insert(user_games(user_id = ))
+                    user.users_rating.append(Game.query.get(id))
+                    print(user.users_rating)
+                    db.session.add(user)
+                    db.session.commit()
+                except Exception as e:
+                    print(e)
+                return jsonify(rating=user.users_rating, message="Successfully added", code=200), 200
+            return jsonify(message="Error appeared", code=502), 502
+
+
+sologame = GameAPI.as_view("game")
+api_main.add_url_rule("/game/<int:id>", endpoint="game", view_func=sologame, methods=["GET", "POST"])
 
 
 class HelperAPI(Resource):
     # @swag_from("swagger/helper/get.yaml", validation=True)
     def get(self):
-        genres = request.args.getlist("genres")
-        players_count = request.args.get("players_count")
-        is_free = request.args.get("is_free")
+        from sqlalchemy import func
+        all_genres = Genre.query.all()
+        genres_of_games = request.args.getlist('genres')
+        genres_of_games = [int(x) for x in genres_of_games]
+        gamers = request.args.get('gamers')
+        cost = request.args.get('cost')
+        all_games = Game.query.all()
+        max_players = db.session.query(func.max(Game.players_count)).one()[0]
+        games = []
+        for game in all_games:
+            temp_list = []
+            for el in game.genres:
+                temp_list.append(el.id)
+            if len(genres_of_games) != 0:
+                if all(x in temp_list for x in genres_of_games) and int(gamers) <= game.players_count and int(
+                        cost) == game.price:
+                    games.append(game)
 
-        args = dict()
-        for arg in request.args:
-            args[f"{arg}"] = request.args[arg]
-
-        # filtered_games: list = Game.query.filter_by(**args).order_by(Game.rating.desc()).all()
-        if hasattr(args, "genres"):
-            delattr(args, "genres")
-        print(args)
-        filtered_games = db.session.query(Game, Genre).join(game_genres).all()
-        # filtered_games = Game.query.select_from(Genre).join(Game.genres)\
-        #     .filter(Game.price==is_free and Game.players_count==players_count)\
-        #     .all()
-        #     .filter_by(Genre.name.ilike("%эк%"))\
-
-        # db.Query().join(Game)
-        # data = db.session.query(Game)\
-        #     .filter(
-        #     Game.price.in_((min_price, max_price)),
-        #     Game.players_count == players_count) \
-        #     .all()
-        # .filter(
-        # Genre.name.in_(genres)
-        # )\
-        # .all()
-        return jsonify(data=filtered_games, total=len(filtered_games)), 200
+        return jsonify(games=games, genres=all_genres, max_players=max_players, total=len(games)), 200
 
     # @swag_from("./swagger/helper/post.yaml")
-    def post(self):
-        pass
+    # def post(self):
+    #     pass
 
 
 helper = HelperAPI.as_view("helper")
@@ -220,15 +255,15 @@ class ProfileAPI(Resource):
         ids = request.args.get("ids", type=list)
         print(ids)
         users: list
-        if id and "id" in request.path:
+        if id and "id" in request.args:
             user = User.query.get_or_404(id)
             return jsonify(user=user), 200
         elif ids:
             from sqlalchemy.orm import session
-            users = User.query.filter(User.id.in_(ids))
+            users = User.query.filter(User.id.in_(ids)).all()
         else:
             users = User.query.all()
-        return jsonify(users=list(map(lambda user_: {f"user_{user_.id}": dataclasses.asdict(user_)}, users)))
+        return jsonify(users=users)
 
     def post(self):
         pass
@@ -241,8 +276,6 @@ api_main.add_url_rule("/users", view_func=profile, methods=["GET", "POST"])
 
 # @api.resource("/login")
 class LoginAPI(Resource):
-    def get(self):
-        pass
 
     def post(self):
         from werkzeug.security import check_password_hash
@@ -262,27 +295,30 @@ api_main.add_url_rule("/login", view_func=login, methods=["GET", "POST"])
 
 # @api.resource("/registrate")
 class RegistrateAPI(Resource):
-    def get(self):
-        pass
 
     def post(self):
+        kwargs = request.form
+        print(kwargs)
         from werkzeug.security import generate_password_hash
         if request.method == "POST":
-            if request.form['password'] == request.form['password2']:
+            if kwargs['password'] == kwargs['password2']:
+                # user = User(nickname=kwargs['nickname'], login_mail=kwargs['login-mail'],
+                #             pass_hash=generate_password_hash(request.form['password']), active=True)
                 user = User(nickname=request.form['nickname'], login_mail=request.form['login-mail'],
-                            pass_hash=generate_password_hash(request.form['password']))
+                            pass_hash=generate_password_hash(request.form['password']), active=True)
+                print(user)
                 try:
                     db.session.add(user)
                     db.session.commit()
-                except sqlite3.Error as e:
-                    return e.__repr__(), 400
-                return jsonify(user)
-            else:
-                return jsonify(reponse={"message": "User already exists"}), 400
+                    print("OK")
+                except Exception as e:
+                    return e
+                return jsonify(user=dataclasses.asdict(user), code=200), 200
+            return jsonify(message="User already exists"), 400
 
 
 registrate = RegistrateAPI.as_view("registrate")
-api_main.add_url_rule("/registrate", view_func=registrate, methods=["GET", "POST"])
+api_main.add_url_rule("/registrate", view_func=registrate, methods=["POST"])
 
 
 # @api.resource("/change-pass")
@@ -319,9 +355,4 @@ class ChangePassAPI(Resource):
 
 change_pass = LoginAPI.as_view("change-pass")
 api_main.add_url_rule("/change-pass", view_func=change_pass, methods=["GET", "POST"])
-# from Backend.app import api
-# api.add_resource(GamesAPI, "/catalog", "/game/<int:id>", endpoint="games")
-# api.add_resource(HelperAPI, "/helper", endpoint="helper")
-# api.add_resource(ProfileAPI, "/helper", endpoint="helper")
-# api.add_resource(LoginAPI, "/helper", endpoint="helper")
-# api.add_resource(RegistrateAPI, "/helper", endpoint="helper")
+
